--- a/src/app/espace-admin/sessionFormation/ajouter-session/ajouter-session.component.html
+++ b/src/app/espace-admin/sessionFormation/ajouter-session/ajouter-session.component.html
@@ -1,6 +1,6 @@
 
 
-<form [formGroup]="form" (ngSubmit)="editerSession()"  >
+<form [formGroup]="form" (ngSubmit)="ajoutSession()"  >
 
     <h2>Ajouter Une Session</h2>
 
