--- a/src/app/espace-admin/candidat/afficher-candidats/afficher-candidats.component.html
+++ b/src/app/espace-admin/candidat/afficher-candidats/afficher-candidats.component.html
@@ -10,7 +10,6 @@
       <th scope="col">Nom</th>
       <th scope="col">Prenom</th>
       <th scope="col">Email</th>
-      <th scope="col">Téléphone</th>
       <th scope="col">Editer</th>
       <th scope="col">Supprimer</th>
       <th scope="col">Details</th>
@@ -18,16 +17,15 @@
     </tr>
   </thead>
   <tbody>
-    <tr >
-      <th scope="row">formateur</th>
-      <td>formateur</td>
-      <td>formateur</td>
-      <td>formateur</td>
-      <td>formateur</td>
-      <td><button class="btn btn-primary" >Editer</button></td>
+    <tr *ngFor="let candidat of candidats" >
+      <th scope="row"> {{candidat.cin}} </th>
+      <td>{{candidat.nom}}</td>
+      <td>{{candidat.prenom}}</td>
+      <td>{{candidat.email}}</td>
+      <td><button class="btn btn-primary" [routerLink]="['/admin', 'editer-candidat', candidat.id]" >Editer</button></td>
 
-      <td><button class="btn btn-danger" >Supprimer</button></td>
-      <td><button class="btn btn-primary" (click)="openPopup(detail)">Details</button></td>
+      <td><button class="btn btn-danger" (click)="opendetail(supp,candidat)" >Supprimer</button></td>
+      <td><button class="btn btn-primary" (click)="opendetail(detail,candidat)">Details</button></td>
       <!-- <td><button class="btn btn-primary" [routerLink]="['/Admin', 'detail-formateur', formateur.id]">Details</button></td> -->
 
 
@@ -43,7 +41,7 @@
 
   <div class="modal-content">
     <div class="modal-header p-5 pb-4 border-bottom-0">
-      <h1 class="fw-bold mb-0 fs-2">Formateur Details</h1>
+      <h1 class="fw-bold mb-0 fs-2">Candidat Details</h1>
       <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
     </div>
   
@@ -51,34 +49,44 @@
       
       <ul class="list-group">
         <li class="list-group-item">
-            <strong>ID : </strong> <span id="id">formateur</span>
+            <strong>ID : </strong> <span id="id">{{candidatDetail.id}}</span>
         </li>
         <li class="list-group-item">
-            <strong>CIN : </strong> <span id="CIN">formateur</span>
+            <strong>CIN : </strong> <span id="CIN">{{candidatDetail.cin}}</span>
         </li>
         <li class="list-group-item">
-            <strong>Nom : </strong> <span id="Nom">formateur</span>
+            <strong>Nom : </strong> <span id="Nom">{{candidatDetail.nom}}</span>
         </li>
         <li class="list-group-item">
-            <strong>Prenom : </strong> <span id="Prenom">formateur</span>
+            <strong>Prenom : </strong> <span id="Prenom">{{candidatDetail.prenom}}</span>
         </li>
         <li class="list-group-item">
-            <strong>Numero Telephone : </strong> <span id="tel">formateur</span>
-        </li>
-        <li class="list-group-item">
-            <strong>Email : </strong> <span id="Email">formateur</span>
-        </li>
-        <li class="list-group-item">
-            <strong>Password : </strong> <span id="Password">formateur</span>
+            <strong>Email : </strong> <span id="Email">{{candidatDetail.email}}</span>
         </li>
         
-        <li class="list-group-item">
-            <strong>Specialites : </strong>
-            <span id="Specialites" ><span class="badge rounded-pill bg-secondary mx-1">spe</span></span>
-        </li>
         
     </ul>
     </div>
   </div> 
 
 </ng-template>
+
+
+
+<!-- Supprimmer C -->
+<ng-template #supp let-modal>
+
+  <div class="modal-dialog" role="document">
+    <div class="modal-content" >
+      <div class="modal-body p-4 text-center" >
+        <h5 class="mb-0"> Confirmez La suppression Du {{candidatDetail.nom}} . </h5>
+      </div>
+      <div class="modal-footer flex-nowrap p-0">
+        <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0 border-end" (click)="supprimer()"><strong>Oui, je confirme</strong></button>
+        <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0" (click)="modal.close('Close click')" data-bs-dismiss="modal">Non</button>
+      </div>
+    </div>
+  </div>
+
+</ng-template>  
+
