--- a/src/app/espace-admin/formateur/editer-formateur/editer-formateur.component.html
+++ b/src/app/espace-admin/formateur/editer-formateur/editer-formateur.component.html
@@ -1,1 +1,49 @@
-<p>editer-formateur works!</p>
+<form [formGroup]="formFormateur" (ngSubmit)="editerFormateur()"  >
+
+    <h2>Formateur</h2>
+    <div class="form-floating mb-3">
+        <input type="text" id="nom" name="nom" placeholder="nom" formControlName="nom" class=" form-control rounded-3" >
+        <label for="nom">Nom:</label>
+      </div>
+    
+      <div class="form-floating mb-3">
+        <input type="text" id="prenom" name="prenom" placeholder="prenom"  formControlName="prenom" class=" form-control rounded-3" >
+        <label for="prenom">Prenom:</label>
+      </div>
+    
+      <div class="form-floating mb-3">
+        <input type="text" id="numeroCarteIdentite" placeholder="numeroCarteIdentite" name="numeroCarteIdentite" formControlName="cin"  class=" form-control rounded-3" >
+        <label for="numeroCarteIdentite">Numero Carte Identite:</label>
+      </div>
+  
+      <div class="form-floating mb-3">
+        <input type="email" id="email" name="email" placeholder="email" formControlName="email" class=" form-control rounded-3" >
+        <label for="email">Email:</label>
+      </div>
+    
+      <!-- <div class="form-floating mb-3">
+        <input type="password" id="motDePasse" name="motDePasse" placeholder="motDePasse" formControlName="password" class=" form-control rounded-3" >
+        <label for="motDePasse">Mot de Passe:</label>
+      </div>
+  
+      <div class="form-floating mb-3">
+        <input type="password" id="motDePasse2" name="motDePasse2" placeholder="motDePasse2" formControlName="confirmPassword" class=" form-control rounded-3" >
+        <label for="motDePasse2">Reécrivez Mot de Passe:</label>
+      </div> -->
+    
+      <div class="form-floating mb-3">
+        <input type="text" id="numeroTelephone" name="numeroTelephone" placeholder="numeroTelephone" formControlName="tel" class=" form-control rounded-3" >
+        <label for="numeroTelephone">Numero Telephone:</label>
+      </div>
+    
+      <div  class="form-floating mb-3">
+        <input type="text" id="specialites" name="specialites" placeholder="specialites" formControlName="specialites" class=" form-control rounded-3" >
+        <label for="specialites">Specialites :</label>
+        <span class="error" *ngIf="formFormateur.get('specialites')?.value=='' && formFormateur.get('specialites')?.touched " >Vos Specialites sont obligatoire <br></span>
+        <span class="error" *ngIf="formFormateur.get('specialites')?.invalid && formFormateur.get('specialites')?.touched" >Vos Specialites doit etre separee par une ,</span>
+      </div>
+    
+      <button type="submit" class="btn form-control btn-success mt-3" [disabled]="formFormateur.invalid" style="max-width: 500px;" >Submit</button>
+    
+  
+  </form>
