--- a/src/app/espace-admin/formation/afficher-formation/afficher-formation.component.html
+++ b/src/app/espace-admin/formation/afficher-formation/afficher-formation.component.html
@@ -1,34 +1,35 @@
 <h2>Liste des formations</h2>
-<button class="btn btn-success mb-3" [routerLink]="['/admin', 'ajouter-formation']">Ajouter une Formation</button>
 
+<div style="display: flex;">
+<button class="btn btn-success mb-3" [routerLink]="['/admin', 'ajouter-formation']">Ajouter une Formation</button>
+<button class="btn btn-primary mx-2 mb-3" [routerLink]="['/admin', 'afficher-formation-demande']">afficher les demandes</button>
+
+</div>
 <div class="table-responsives-md">
 
 <table class="table table-striped ">
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Nom</th>
-      <th scope="col">Prenom</th>
-      <th scope="col">Email</th>
-      <th scope="col">Téléphone</th>
+      <th scope="col">Titre</th>
+      <th scope="col">Charge Horaire</th>
+      <th scope="col">Niveau</th>
       <th scope="col">Editer</th>
-      <th scope="col">Supprimer</th>
+      <!-- <th scope="col">Supprimer</th> -->
       <th scope="col">Details</th>
 
     </tr>
   </thead>
   <tbody>
-    <tr >
-      <th scope="row">formateur</th>
-      <td>formateur</td>
-      <td>formateur</td>
-      <td>formateur</td>
-      <td>formateur</td>
-      <td><button class="btn btn-primary" >Editer</button></td>
+    <tr *ngFor="let formation of formations">
+      <th scope="row"><img style="height:100px ;" src="{{formation.img}}" alt="{{formation.titre}}"></th>
+      <td>{{formation.titre}}</td>
+      <td>{{formation.chargeHoraire}}</td>
+      <td>{{formation.niveau}}</td>
+      <td><button class="btn btn-info" routerLink="/admin/editer-formation/{{formation.id}}" >Editer</button></td>
 
-      <td><button class="btn btn-danger" >Supprimer</button></td>
-      <td><button class="btn btn-primary" (click)="openPopup(detail)">Details</button></td>
-      <!-- <td><button class="btn btn-primary" [routerLink]="['/Admin', 'detail-formateur', formateur.id]">Details</button></td> -->
+      <!-- <td><button class="btn btn-danger" >Supprimer</button></td> -->
+      <td><button class="btn btn-primary" (click)="opendetail(detail,formation)">Details</button></td>
 
 
     </tr>
@@ -43,39 +44,41 @@
 
   <div class="modal-content">
     <div class="modal-header p-5 pb-4 border-bottom-0">
-      <h1 class="fw-bold mb-0 fs-2">Formateur Details</h1>
+      <h1 class="fw-bold mb-0 fs-2">Formation Details</h1>
       <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
     </div>
+
+    <img src="{{formationDetail.img}}" style="max-height: 280px;" alt="{{formationDetail.titre}}">
   
-    <div class="modal-body p-5 pt-0">
-      
-      <ul class="list-group">
+    <div class="modal-body p-5 pt-0">      
+      <ul class="list-group">        
         <li class="list-group-item">
-            <strong>ID : </strong> <span id="id">formateur</span>
+            <strong>ID : </strong> <span id="id">{{formationDetail.id}}</span>
         </li>
         <li class="list-group-item">
-            <strong>CIN : </strong> <span id="CIN">formateur</span>
+            <strong>Titre : </strong> <span id="CIN">{{formationDetail.titre}}</span>
         </li>
         <li class="list-group-item">
-            <strong>Nom : </strong> <span id="Nom">formateur</span>
+            <strong>Description : </strong> <span id="Nom">{{formationDetail.description}}</span>
         </li>
         <li class="list-group-item">
-            <strong>Prenom : </strong> <span id="Prenom">formateur</span>
+            <strong>Charge horaire : </strong> <span id="Prenom">{{formationDetail.chargeHoraire}}</span>
         </li>
         <li class="list-group-item">
-            <strong>Numero Telephone : </strong> <span id="tel">formateur</span>
+            <strong>Programme : </strong> <span id="tel">{{formationDetail.programme}}</span>
         </li>
         <li class="list-group-item">
-            <strong>Email : </strong> <span id="Email">formateur</span>
-        </li>
-        <li class="list-group-item">
-            <strong>Password : </strong> <span id="Password">formateur</span>
+            <strong>Niveau : </strong> <span id="Email">{{formationDetail.niveau}}</span>
         </li>
         
         <li class="list-group-item">
-            <strong>Specialites : </strong>
-            <span id="Specialites" ><span class="badge rounded-pill bg-secondary mx-1">spe</span></span>
+            <strong>Mots Clés : </strong>
+            <span id="Specialites" *ngFor="let mot of formationDetail.motsCles" ><span class="badge rounded-pill bg-info mx-1">{{mot}}</span></span>
         </li>
+        <li class="list-group-item">
+          <strong>Catégories : </strong>
+          <span id="Specialites" *ngFor="let cat of formationDetail.categories" ><span class="badge rounded-pill bg-secondary mx-1">{{cat}}</span></span>
+      </li>
         
     </ul>
     </div>
