--- a/src/app/espace-admin/formation/ajouter-formation/ajouter-formation.component.html
+++ b/src/app/espace-admin/formation/ajouter-formation/ajouter-formation.component.html
@@ -1,50 +1,57 @@
-<form  >
+<form [formGroup]="form" (ngSubmit)="ajoutFormation()" >
 
-    <div>
+  <h2>Ajouter une Formation</h2>
+    <div class="form-floating mb-3">
+        <input type="text" id="titre" name="titre" placeholder="titre" formControlName="titre" class=" form-control" >
         <label for="titre">titre:</label>
-        <input type="text" id="titre" name="titre" formControlName="titre" class=" form-control" >
       </div>
     
-      <div>
+      <div class="form-floating mb-3">
+        <input type="text" id="description" name="description"  placeholder="description"  formControlName="description" class=" form-control" >
         <label for="description">description:</label>
-        <input type="text" id="description" name="description"  formControlName="description" class=" form-control" >
       </div>
     
-      <div>
+      <div class="form-floating mb-3">
+        <input type="text" id="chargeHoraire" name="chargeHoraire" placeholder="chargeHoraire" formControlName="chargeHoraire"  class=" form-control" >
         <label for="chargeHoraire">chargeHoraire:</label>
-        <input type="text" id="chargeHoraire" name="chargeHoraire" formControlName="chargeHoraire"  class=" form-control" >
       </div>
 
-      <div>
+      <div class="form-floating mb-3">
+        <input type="text" id="programme" name="programme" placeholder="programme" formControlName="programme" class=" form-control" >
         <label for="programme">programme:</label>
-        <input type="email" id="programme" name="programme" formControlName="programme" class=" form-control" >
       </div>
 
-      <div >
+      <div  class="form-floating mb-3">
+        <input type="text" id="motsCles" name="motsCles" placeholder="motsCles" formControlName="motsCles" class=" form-control" >
         <label >motsCles :</label>
-        <input type="text" id="motsCles" name="motsCles" formControlName="motsCles" class=" form-control" >
-        <!-- <span class="error" *ngIf="form.get('motsCles')?.value=='' && form.get('motsCles')?.touched ">Vos Specialites sont obligatoire <br></span>
-        <span class="error" *ngIf="form.get('motsCles')?.invalid && form.get('motsCles')?.touched">Vos Specialites doit etre separee par une ,</span> -->
+        <span class="error" *ngIf="form.get('motsCles')?.value=='' && form.get('motsCles')?.touched ">Vos Specialites sont obligatoire <br></span>
+        <span class="error" *ngIf="form.get('motsCles')?.invalid && form.get('motsCles')?.touched">Vos Specialites doit etre separee par une ,</span>
       </div>
 
-      <div >
+      <div  class="form-floating mb-3">
+        <input type="text" id="categories" name="categories" placeholder="categories" formControlName="categories" class=" form-control" >
         <label >categories :</label>
-        <input type="text" id="categories" name="categories" formControlName="categories" class=" form-control" >
-        <!-- <span class="error" *ngIf="form.get('categories')?.value=='' && form.get('categories')?.touched ">Vos Specialites sont obligatoire <br></span>
-        <span class="error" *ngIf="form.get('categories')?.invalid && form.get('categories')?.touched">Vos Specialites doit etre separee par une ,</span> -->
+        <span class="error" *ngIf="form.get('categories')?.value=='' && form.get('categories')?.touched ">Vos Specialites sont obligatoire <br></span>
+        <span class="error" *ngIf="form.get('categories')?.invalid && form.get('categories')?.touched">Vos Specialites doit etre separee par une ,</span>
       </div>
 
-      <div class="input-group dynamic-input my-3">
+      <div class="input-group form-control my-3">
         <label for="niveauDifficulte" class="input-group-text" >niveauDifficulte:</label>
-        <select name="niveauDifficulte" id="niveauDifficulte" formControlName="niveauDifficulte" class="form-select">
+        <select name="niveauDifficulte" id="niveauDifficulte" formControlName="niveau" class="form-select">
             <option value="" selected hidden>Choisir...</option>
             <option value="débutant">débutant</option>
             <option value="intermédiaire">intermédiaire</option>
             <option value="avancé">avancé</option>
         </select>
+  
+      </div>
+
+      <div class="form-floating mb-3">
+        <input type="url" id="image" name="image" placeholder="image" formControlName="img" class=" form-control" >
+        <label for="image">image:</label>
       </div>
     
-      <button type="submit" class="btn form-control btn-success mt-3" >Submit</button>
+      <button type="submit" [disabled]="form.invalid" class="btn form-control btn-success mt-3" >Submit</button>
     
 
 
