--- a/src/app/espace-public/footer-public/footer-public.component.html
+++ b/src/app/espace-public/footer-public/footer-public.component.html
@@ -4,7 +4,7 @@
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <img src="../../../favicon.ico" style="height: 25px; margin: 0 5px;" alt="Iset Rades">
       </a>
-      <span class="mb-3 mb-md-0 text-muted">Copyright &copy; 2023 ISET de Rades</span>
+      <span class="mb-3 mb-md-0 text-muted">Copyright &copy; 2023 ISET Rades</span>
     </div>
 
     
