--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,15 @@ input.ng-invalid.ng-touched{
     background-color: rgba(255, 115, 0, 0.3);
   }
 
+  .text-clicable{
+    cursor: pointer;color: blue;display: inline;
+  }
+
+  .text-clicable:hover {
+    text-decoration: underline;
+    font-size: 1.1em;
+  }
+
   /* body */
   .container-body {
     margin: 8px 5px;
@@ -104,4 +113,23 @@ input.ng-invalid.ng-touched{
   content: "";
 }
 
-/* */
+/* date picker */
+
+.custom-day {
+  text-align: center;
+  padding: 0.185rem 0.25rem;
+  display: inline-block;
+  height: 2rem;
+  width: 2rem;
+}
+.custom-day.focused {
+  background-color: #e6e6e6;
+}
+.custom-day.range,
+.custom-day:hover {
+  background-color: rgb(2, 117, 216);
+  color: white;
+}
+.custom-day.faded {
+  background-color: rgba(2, 117, 216, 0.5);
+}
