--- a/src/app/espace-prive-c/navbar-candidat/navbar-candidat.component.html
+++ b/src/app/espace-prive-c/navbar-candidat/navbar-candidat.component.html
@@ -1,6 +1,6 @@
-<nav  style="opacity: 0.90;border-bottom-left-radius: 15px ;border-bottom-right-radius: 15px ;" class="navbar navbar-expand-lg py-2 bg-info"    >
+<nav  style="opacity: 0.90;border-bottom-left-radius: 15px ;border-bottom-right-radius: 15px ;" class="navbar navbar-expand-lg py-2 bg-primary bg-gradient"    >
     <div class="container-fluid">
-      <h1  >Gestion des sessions de formations</h1>
+      <h1 style="font-size: 27px;color: white;" > <img src="../../../favicon.ico" style="height: 25px; margin: 0 5px;" alt="Iset Rades">  Formation Iset Rades </h1>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -38,7 +38,7 @@
             <a class="nav-link mx-auto" style="display: inline-block;" routerLink="/candidat/mesFormations"  routerLinkActive="active-link" [routerLinkActiveOptions]='{exact:true}' >Mes Formations
             </a>
           
-            <a class="btn btn-outline-secondary mx-2" (click)="openPopup(logout)" >Logout
+            <a class="btn btn-secondary mx-2" (click)="openPopup(logout)" >Logout
             </a>
           </li>
           </ul>
