--- a/src/app/espace-public/footer-public/footer-public.component.html
+++ b/src/app/espace-public/footer-public/footer-public.component.html
@@ -1,7 +1,7 @@
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-1 border-top  " style="background-color: #75b798bd; max-height: 190px;color: #fff; border-top-left-radius: 15px ;border-top-right-radius: 15px ;">
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-1 border-top  " style="background-color: #3eb9c9bd; max-height: 190px;color: #fff; ">
     <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">  <!-- 75b798bd  -- border-top-left-radius: 15px ;border-top-right-radius: 15px ; -->
         <img src="../../../favicon.ico" style="height: 25px; margin: 0 5px;" alt="Iset Rades">
       </a>
       <span class="mb-3 mb-md-0 text-muted">Copyright &copy; 2023 ISET Rades</span>
