--- a/src/app/espace-admin/formateur/ajouter-formateur/ajouter-formateur.component.html
+++ b/src/app/espace-admin/formateur/ajouter-formateur/ajouter-formateur.component.html
@@ -38,9 +38,10 @@
   
     <div  class="form-floating mb-3">
       <input type="text" id="specialites" name="specialites" placeholder="specialites" formControlName="specialites" class=" form-control rounded-3" >
-      <label for="specialites">Specialites :</label>
+      <label for="specialites">Specialités  :</label>
+      <span class="remarque">Séparrer les specialités par une virgule ( , )</span><br>
       <span class="error" *ngIf="formFormateur.get('specialites')?.value=='' && formFormateur.get('specialites')?.touched " >Vos Specialites sont obligatoire <br></span>
-      <span class="error" *ngIf="formFormateur.get('specialites')?.invalid && formFormateur.get('specialites')?.touched" >Vos Specialites doit etre separee par une ,</span>
+      <span class="error" *ngIf="formFormateur.get('specialites')?.invalid && formFormateur.get('specialites')?.touched" >Vos Specialites doivent être separée par une ( , )</span>
     </div>
   
     <button type="submit" class="btn form-control btn-success mt-3" [disabled]="formFormateur.invalid" style="max-width: 500px;" >Submit</button>
