--- a/src/app/espace-admin/formation/ajouter-formation/ajouter-formation.component.html
+++ b/src/app/espace-admin/formation/ajouter-formation/ajouter-formation.component.html
@@ -23,20 +23,22 @@
 
       <div  class="form-floating mb-3">
         <input type="text" id="motsCles" name="motsCles" placeholder="motsCles" formControlName="motsCles" class=" form-control" >
-        <label >motsCles :</label>
-        <span class="error" *ngIf="form.get('motsCles')?.value=='' && form.get('motsCles')?.touched ">Vos Specialites sont obligatoire <br></span>
-        <span class="error" *ngIf="form.get('motsCles')?.invalid && form.get('motsCles')?.touched">Vos Specialites doit etre separee par une ,</span>
+        <label >Mots Clés :</label>
+        <span class="remarque">Séparrer les mots par une virgule ( , )</span><br>
+        <span class="error" *ngIf="form.get('motsCles')?.value=='' && form.get('motsCles')?.touched ">Les mot cles sont obligatoire <br></span>
+        <span class="error" *ngIf="form.get('motsCles')?.invalid && form.get('motsCles')?.touched">Les mot cles doivent être separée par une ( , )</span>
       </div>
 
       <div  class="form-floating mb-3">
         <input type="text" id="categories" name="categories" placeholder="categories" formControlName="categories" class=" form-control" >
-        <label >categories :</label>
-        <span class="error" *ngIf="form.get('categories')?.value=='' && form.get('categories')?.touched ">Vos Specialites sont obligatoire <br></span>
-        <span class="error" *ngIf="form.get('categories')?.invalid && form.get('categories')?.touched">Vos Specialites doit etre separee par une ,</span>
+        <label >Catégories :</label>
+        <span class="remarque">Séparrer les catégories par une virgule ( , )</span><br>
+        <span class="error" *ngIf="form.get('categories')?.value=='' && form.get('categories')?.touched ">Les categories sont obligatoire <br></span>
+        <span class="error" *ngIf="form.get('categories')?.invalid && form.get('categories')?.touched">Les categories doivent être separée par une ( , )</span>
       </div>
 
       <div class="input-group form-control my-3">
-        <label for="niveauDifficulte" class="input-group-text" >niveauDifficulte:</label>
+        <label for="niveauDifficulte" class="input-group-text" >Niveau Difficulté :</label>
         <select name="niveauDifficulte" id="niveauDifficulte" formControlName="niveau" class="form-select">
             <option value="" selected hidden>Choisir...</option>
             <option value="débutant">débutant</option>
