--- a/src/app/espace-prive-c/mes-formations/mes-formations.component.html
+++ b/src/app/espace-prive-c/mes-formations/mes-formations.component.html
@@ -59,7 +59,7 @@
             <strong>formateurs : </strong> <span id="formateurs">{{sessionDetail.nomFormateurs}}</span>
         </li>
         <li class="list-group-item">
-            <strong>candidats : </strong> <span id="candidats">{{sessionDetail.nomCandidats}}</span>
+            <strong>candidats : </strong> <span id="candidats">{{sessionDetail.candidats.length}}</span>
         </li>
         <li class="list-group-item">
             <strong>dateDebut : </strong> <span id="dateDebut">{{sessionDetail.dateDebut}}</span>
