--- a/src/app/espace-public/navbar-public/navbar-public.component.html
+++ b/src/app/espace-public/navbar-public/navbar-public.component.html
@@ -1,14 +1,14 @@
-<nav  style="opacity: 0.90;border-bottom-left-radius: 15px ;border-bottom-right-radius: 15px ;" class="navbar navbar-expand-lg py-2 bg-info"    >
+<nav  style="opacity: 0.90;border-bottom-left-radius: 15px ;border-bottom-right-radius: 15px ; " class="navbar navbar-expand-lg py-2 bg-primary bg-gradient"    >
   <div class="container-fluid">
-    <h1  >Gestion des sessions de formations</h1>
+    <h1 style="font-size: 27px; color: white; " > <img src="../../../favicon.ico" style="height: 25px; margin: 0 5px;" alt="Iset Rades"> Formation Iset Rades </h1>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarColor01">
+    <div class="collapse navbar-collapse " id="navbarColor01">
       <ul class="navbar-nav ms-auto">
           
         <li class="nav-item">
-          <a class="nav-link " routerLink="/public/acceuil"  routerLinkActive="active-link" [routerLinkActiveOptions]='{exact:true}' >Acceuil
+          <a class="nav-link "  routerLink="/public/acceuil"  routerLinkActive="active-link" [routerLinkActiveOptions]='{exact:true}' >Acceuil
           </a>
         </li>
         
@@ -18,10 +18,10 @@
         </li>
 
         <li class="nav-item">
-          <a class="btn btn-outline-success mx-auto" (click)="openPopup(login)" >Login
+          <a class="btn btn-success mx-auto" (click)="openPopup(login)" >Login
           </a>
         
-          <a class="btn btn-outline-secondary mx-2 " routerLink="/public/sign-up" >Sign up
+          <a class="btn btn-secondary mx-2 " routerLink="/public/sign-up" >Sign up
           </a>
         </li>
         </ul>
