--- a/src/app/espace-public/sign-up/sign-up.component.html
+++ b/src/app/espace-public/sign-up/sign-up.component.html
@@ -102,8 +102,9 @@
       <div  class="form-floating mb-3">
         <input type="text" id="specialites" name="specialites" placeholder="specialites" formControlName="specialites" class=" form-control rounded-3" >
         <label for="specialites">Specialites :</label>
+        <span class="remarque">Séparrer les specialites par une virgule ( , )</span><br>
         <span class="error" *ngIf="formFormateur.get('specialites')?.value=='' && formFormateur.get('specialites')?.touched " >Vos Specialites sont obligatoire <br></span>
-        <span class="error" *ngIf="formFormateur.get('specialites')?.invalid && formFormateur.get('specialites')?.touched" >Vos Specialites doit etre separee par une ,</span>
+        <span class="error" *ngIf="formFormateur.get('specialites')?.invalid && formFormateur.get('specialites')?.touched" >Vos Specialites doivent être separee par une ( , )</span>
       </div>
     
       <button type="submit" class="btn form-control btn-success mt-3" [disabled]="formFormateur.invalid" style="max-width: 500px;" >Submit</button>
