--- a/src/app/espace-public/footer-public/footer-public.component.html
+++ b/src/app/espace-public/footer-public/footer-public.component.html
@@ -10,9 +10,9 @@
     
 
     <ul class="container text-center text-muted" > 
-        <b (click)="openPopup(loginadmin)" >Dev :</b> 
+        <b class="buttonClickable" (click)="openPopup(loginadmin)" >Pour vous connecter en tant qu'admin, cliquez ici</b> 
         <br>
-        Saadaoui Yassine : saadaouiy51@gmail.com <br>
+        <b>Dev :</b> Saadaoui Yassine : saadaouiy51@gmail.com <br>
       
      </ul>
   </footer>
