--- a/src/app/espace-admin/formation/ajouter-formation/ajouter-formation.component.html
+++ b/src/app/espace-admin/formation/ajouter-formation/ajouter-formation.component.html
@@ -14,11 +14,15 @@
       <div class="form-floating mb-3">
         <input type="text" id="chargeHoraire" name="chargeHoraire" placeholder="chargeHoraire" formControlName="chargeHoraire"  class=" form-control" >
         <label for="chargeHoraire">chargeHoraire:</label>
+        
       </div>
 
       <div class="form-floating mb-3">
         <input type="text" id="programme" name="programme" placeholder="programme" formControlName="programme" class=" form-control" >
         <label for="programme">programme:</label>
+        <span class="remarque">Séparrer chaque programme par une virgule ( , )</span><br>
+        <span class="error" *ngIf="form.get('programme')?.value=='' && form.get('programme')?.touched ">Les programmes sont obligatoire <br></span>
+        <span class="error" *ngIf="form.get('programme')?.invalid && form.get('programme')?.touched">Les programmes doivent être separée par une ( , )</span>
       </div>
 
       <div  class="form-floating mb-3">
